FLY wire David/force-app/main/default/objects/KYC_Application__c/KYC_Application__c.object-meta.xml
<CustomObject>
    <label>KYC Application</label>
    <nameField>
        <displayFormat>KYC-{00000}</displayFormat>
        <label>KYC Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KYC Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>