FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Accept_Advance_Payments__c.field-meta.xml
<CustomField>
    <fullName>Accept_Advance_Payments__c</fullName>
    <label>Accept Advance Payments</label>
    <length>22</length>
    <type>Text</type>
</CustomField>