FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Account_QA__c.field-meta.xml
<CustomField>
    <fullName>Account_QA__c</fullName>
    <description>The Account KYC QA.</description>
    <formula>Account__r.KYC_QA__c</formula>
    <inlineHelpText>Low Risk Application pends KYC Analyst Review</inlineHelpText>
    <label>Account QA</label>
    <type>Text</type>
</CustomField>