FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Account_QC__c.field-meta.xml
<CustomField>
    <fullName>Account_QC__c</fullName>
    <description>The Account KYC QC.</description>
    <formula>Account__r.KYC_QC__c</formula>
    <inlineHelpText>Low Risk Application pends KYC Analyst Review</inlineHelpText>
    <label>Account QC</label>
    <type>Text</type>
</CustomField>