FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Account_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Account_Risk_Level__c</fullName>
    <description>The Account KYC Risk Level.</description>
    <formula>Account__r.KYC_Risk_Level__c</formula>
    <inlineHelpText>Inherent money laundering and fraud risk to FW: Low, Med, High</inlineHelpText>
    <label>Account Risk Level</label>
    <type>Text</type>
</CustomField>