FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Account_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Account_Risk_Score__c</fullName>
    <description>The account KYC risk score.</description>
    <formula>Account__r.KYC_Risk_Score__c</formula>
    <inlineHelpText>Inherent money laundering and fraud risk to FW: Low, Med, High</inlineHelpText>
    <label>Account Risk Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>