FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Account_STP__c.field-meta.xml
<CustomField>
    <fullName>Account_STP__c</fullName>
    <description>The account KYC STP</description>
    <formula>Account__r.KYC_STP__c</formula>
    <inlineHelpText>The account KYC STP</inlineHelpText>
    <label>OBS Account STP</label>
    <type>Text</type>
</CustomField>