FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Account_Tags__c.field-meta.xml
<CustomField>
    <fullName>Account_Tags__c</fullName>
    <description>The Account KYC tags.</description>
    <formula>Account__r.KYC_Tags__c</formula>
    <inlineHelpText>Compliance Notations used to aid account category organization</inlineHelpText>
    <label>Account Tags</label>
    <type>Text</type>
</CustomField>