FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Advance_Payment_2_Type_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Advance_Payment_2_Type_Accepted__c</fullName>
    <label>Advance Payment 2 Type Accepted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>