FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Advance_Payments_1_Processing_Volume__c.field-meta.xml
<CustomField>
    <fullName>Advance_Payments_1_Processing_Volume__c</fullName>
    <label>Advance Payments 1 % Processing Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>