FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Advance_Payments_2_Days_Accepted_Final__c.field-meta.xml
<CustomField>
    <fullName>Advance_Payments_2_Days_Accepted_Final__c</fullName>
    <label>Advance Payments 2 Days Accepted Final</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>