FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Annual_Money_Moved_Credit_Cards__c.field-meta.xml
<CustomField>
    <fullName>Annual_Money_Moved_Credit_Cards__c</fullName>
    <label>Annual Money Moved Credit Cards</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>