FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Date__c</fullName>
    <description>The date of the application.</description>
    <inlineHelpText>The date of the application.</inlineHelpText>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>