FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Application_Date_Auto__c.field-meta.xml
<CustomField>
    <fullName>Application_Date_Auto__c</fullName>
    <description>This field is needed to show the record CreatedDate separated from the CreatedBy standard field</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OBS Application Date</label>
    <type>Date</type>
</CustomField>