FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Application_decided_with_STP__c.field-meta.xml
<CustomField>
    <fullName>Application_decided_with_STP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Application Auto-Approved for Low Risk and Complete Requirements</inlineHelpText>
    <label>Application decided with STP</label>
    <type>Checkbox</type>
</CustomField>