FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Application_ID__c.field-meta.xml
<CustomField>
    <fullName>Application_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique Passfort Identifier for KYC application</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique Passfort Identifier for KYC application</inlineHelpText>
    <label>Application ID</label>
    <length>205</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>