FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Application_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Review_Status__c</fullName>
    <label>Application Review Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Incomplete application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>