FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Application_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Status_Date__c</fullName>
    <description>This field value is set by the (KYC_APP) KYC Status Changed when the Status value is changed.</description>
    <inlineHelpText>Last status update</inlineHelpText>
    <label>Application Date Status</label>
    <type>Date</type>
</CustomField>