FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Associate_DOB_BO_DIR_AP__c.field-meta.xml
<CustomField>
    <fullName>Associate_DOB_BO_DIR_AP__c</fullName>
    <label>OBS Associate DOB (BO,DIR,AP)</label>
    <type>Date</type>
</CustomField>