FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Associate_Last_Name_BO_DIR_AP__c.field-meta.xml
<CustomField>
    <fullName>Associate_Last_Name_BO_DIR_AP__c</fullName>
    <label>OBS Associate Last Name (BO,DIR,AP)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>