FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Bank_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Name__c</fullName>
    <inlineHelpText>Account Holder Name for Bank Account Submitted</inlineHelpText>
    <label>Bank Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>