FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Bank_BIC_SWIFT_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_BIC_SWIFT_Code__c</fullName>
    <inlineHelpText>Bank codes facilitate money transfers between banks</inlineHelpText>
    <label>Bank BIC/SWIFT Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>