FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Bank_IBAN__c.field-meta.xml
<CustomField>
    <fullName>Bank_IBAN__c</fullName>
    <inlineHelpText>Standard international numbering system developed to identify an overseas bank account</inlineHelpText>
    <label>Bank IBAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>