FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Batch_Tag__c.field-meta.xml
<CustomField>
    <fullName>Batch_Tag__c</fullName>
    <description>Field to determine if a profile has been migrated. For reporting purposes</description>
    <label>Batch Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>