FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Business_Address_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Business_Address_Reviewed__c</fullName>
    <inlineHelpText>Compliance verifies legitimacy of provide address online or through legal documents</inlineHelpText>
    <label>Business Address Reviewed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>