FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Business_Owner_at_25__c.field-meta.xml
<CustomField>
    <fullName>Business_Owner_at_25__c</fullName>
    <inlineHelpText>Compliance verifies natural persons with direct or indirect share in the company 25%+</inlineHelpText>
    <label>Beneficial Owner at 25%</label>
    <length>255</length>
    <type>Text</type>
</CustomField>