FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Charity_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Charity_Registration_Number__c</fullName>
    <label>Charity Registration #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>