FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Company_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Number__c</fullName>
    <inlineHelpText>Registration number provided to applicant by overseeing country, state, province, etc.</inlineHelpText>
    <label>Company Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>