FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Company_Registered_Address__c.field-meta.xml
<CustomField>
    <fullName>Company_Registered_Address__c</fullName>
    <inlineHelpText>The address that appears on the formation document of a corporation, LLC, LP or other statutory business entity</inlineHelpText>
    <label>Company Registered Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>