FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Company_Registered_Country__c.field-meta.xml
<CustomField>
    <fullName>Company_Registered_Country__c</fullName>
    <label>Company Registered Country</label>
    <length>3</length>
    <type>Text</type>
</CustomField>