FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Company_Registered_Route__c.field-meta.xml
<CustomField>
    <fullName>Company_Registered_Route__c</fullName>
    <label>Company Registered Route</label>
    <length>255</length>
    <type>Text</type>
</CustomField>