FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Company_Registered_Street_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Registered_Street_Number__c</fullName>
    <label>Company Registered  Street Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>