FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Complex_Structure__c.field-meta.xml
<CustomField>
    <fullName>Complex_Structure__c</fullName>
    <inlineHelpText>A business with more than 3 levels of owners between the business and its natural person owner with 25%+ interest</inlineHelpText>
    <label>Complex Structure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>