FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Contact_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Address__c</fullName>
    <inlineHelpText>Email address for sales person&apos;s point of contact</inlineHelpText>
    <label>Contact Email Address</label>
    <type>Email</type>
</CustomField>