FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Countries_of_Final_Destination__c.field-meta.xml
<CustomField>
    <fullName>Countries_of_Final_Destination__c</fullName>
    <label>Countries of Final Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>