FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Country_3_Transaction_Percent__c.field-meta.xml
<CustomField>
    <fullName>Country_3_Transaction_Percent__c</fullName>
    <inlineHelpText>Name of country where funds will be received or sent (top 5 countries with most transaction volume)</inlineHelpText>
    <label>Country 3 Transaction %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>