FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Country_3_Transaction_Representation__c.field-meta.xml
<CustomField>
    <fullName>Country_3_Transaction_Representation__c</fullName>
    <inlineHelpText>Percentage of funds expected to derive from identified country</inlineHelpText>
    <label>Country 3 Payment Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>