FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Country_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Incorporation__c</fullName>
    <inlineHelpText>Country where business entity was established</inlineHelpText>
    <label>Country of Incorporation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>