FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Customer_Declaration__c.field-meta.xml
<CustomField>
    <fullName>Customer_Declaration__c</fullName>
    <inlineHelpText>Applicant agrees to Flywire&apos;s terms and conditions of establishing services and transacting</inlineHelpText>
    <label>Customer Declaration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>