FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Delivery_channel__c.field-meta.xml
<CustomField>
    <fullName>Delivery_channel__c</fullName>
    <inlineHelpText>Method applicant uses to engage with its clients: online, in-person, or both</inlineHelpText>
    <label>Delivery channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>