FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <inlineHelpText>Category of business structure: private, public, non-profit/charity, sole trader/sole proprietor</inlineHelpText>
    <label>Entity Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>