FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Est_Number_of_Annual_Payers__c.field-meta.xml
<CustomField>
    <fullName>Est_Number_of_Annual_Payers__c</fullName>
    <inlineHelpText>Annual tally of payers/students/etc that use the business&apos; services</inlineHelpText>
    <label>Est Number of Annual Payers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>