FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Final_One_Time_1_Other_Payments__c.field-meta.xml
<CustomField>
    <fullName>Final_One_Time_1_Other_Payments__c</fullName>
    <label>Final/One Time 1 Other Payments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>