FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Final_One_Time_2_Payment_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Final_One_Time_2_Payment_Purpose__c</fullName>
    <label>Final/One Time 2 Payment Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>