FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Final_One_Time_2_Processing_Volume__c.field-meta.xml
<CustomField>
    <fullName>Final_One_Time_2_Processing_Volume__c</fullName>
    <label>Final/One Time 2 % Processing Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>