FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/First_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Decision_Date__c</fullName>
    <inlineHelpText>Initial automated approval, review, or declination decision from PF based on initial application information entered</inlineHelpText>
    <label>First Decision Date</label>
    <type>DateTime</type>
</CustomField>