FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <description>The application flag from Passfort.</description>
    <inlineHelpText>The application flag from Passfort.</inlineHelpText>
    <label>Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>