FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Flywire_Entity__c.field-meta.xml
<CustomField>
    <fullName>Flywire_Entity__c</fullName>
    <inlineHelpText>The Flywire corporate entity that the applicant will contract with</inlineHelpText>
    <label>Flywire Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>