FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Flywire_Product__c.field-meta.xml
<CustomField>
    <fullName>Flywire_Product__c</fullName>
    <label>Flywire Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>