FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Incorportation_Date__c.field-meta.xml
<CustomField>
    <fullName>Incorportation_Date__c</fullName>
    <inlineHelpText>Date that the applicant&apos;s business was incoporated</inlineHelpText>
    <label>Incorportation Date</label>
    <type>Date</type>
</CustomField>