FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/KYC_Application_Long_ID__c.field-meta.xml
<CustomField>
    <fullName>KYC_Application_Long_ID__c</fullName>
    <description>The long ID of the KYC Application record.</description>
    <formula>CASESAFEID(Id)</formula>
    <inlineHelpText>The long ID of the KYC Application record.</inlineHelpText>
    <label>KYC Application Long ID</label>
    <type>Text</type>
</CustomField>