FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/KYC_Assignee__c.field-meta.xml
<CustomField>
    <fullName>KYC_Assignee__c</fullName>
    <description>The person reviewing the application for KYC.</description>
    <inlineHelpText>Compliance analyst assigned to the business entity&apos;s application</inlineHelpText>
    <label>KYC Assignee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>