FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Max_Payment_Size__c.field-meta.xml
<CustomField>
    <fullName>Max_Payment_Size__c</fullName>
    <inlineHelpText>The maximum payment size that the applicants payer will make</inlineHelpText>
    <label>Max Payment Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>