FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/MLRO_Delegate_High_Risk_Approver__c.field-meta.xml
<CustomField>
    <fullName>MLRO_Delegate_High_Risk_Approver__c</fullName>
    <inlineHelpText>Name of Money Laundering Risk Officer or Delegate that approves high risk application</inlineHelpText>
    <label>MLRO-Delegate High Risk Approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>