FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Open_Loop_Verified__c.field-meta.xml
<CustomField>
    <fullName>Open_Loop_Verified__c</fullName>
    <inlineHelpText>Transactions between accounts, cards, or parties that don&apos;t belong to the same financial institution</inlineHelpText>
    <label>Open Loop Verified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>