FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Orbis_Incorporation_Date__c.field-meta.xml
<CustomField>
    <fullName>Orbis_Incorporation_Date__c</fullName>
    <inlineHelpText>Date that Orbis reflects the applicant&apos;s business was incorporared</inlineHelpText>
    <label>Orbis Incorporation Date</label>
    <type>Date</type>
</CustomField>