FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Orbis_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Orbis_Tax_ID__c</fullName>
    <inlineHelpText>Number issued by IRS, Social Security Administration, or other Customs (VAT) authority</inlineHelpText>
    <label>Orbis Tax ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>