FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Other_Advance_Payments_1__c.field-meta.xml
<CustomField>
    <fullName>Other_Advance_Payments_1__c</fullName>
    <label>Other Advance Payments 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>