FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Other_Advance_Payments_2__c.field-meta.xml
<CustomField>
    <fullName>Other_Advance_Payments_2__c</fullName>
    <label>Other Advance Payments 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>