FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Peak_Processing_Months__c.field-meta.xml
<CustomField>
    <fullName>Peak_Processing_Months__c</fullName>
    <label>Peak Processing Months</label>
    <length>255</length>
    <type>Text</type>
</CustomField>