FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/PEP_Risk__c.field-meta.xml
<CustomField>
    <fullName>PEP_Risk__c</fullName>
    <inlineHelpText>Risk score for trustee, director, UBO, or authorized party that who holds or has held a significant public position</inlineHelpText>
    <label>PEP Risk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>