FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Phone_number__c.field-meta.xml
<CustomField>
    <fullName>Phone_number__c</fullName>
    <inlineHelpText>Phone number for business applicant</inlineHelpText>
    <label>Phone number</label>
    <type>Phone</type>
</CustomField>