FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Application product name from Passfort.</description>
    <inlineHelpText>Client, Education agent or Payment partner</inlineHelpText>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>