FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Prohibited_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Prohibited_Ownership__c</fullName>
    <inlineHelpText>Ownership types not allowable to Flywire; i.e. ownership in sanctioned geography, sanctioned person owns/operates business, bearer shares, no-doc companies, etc.</inlineHelpText>
    <label>Prohibited Ownership</label>
    <length>255</length>
    <type>Text</type>
</CustomField>