FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Prohibited_Services__c.field-meta.xml
<CustomField>
    <fullName>Prohibited_Services__c</fullName>
    <inlineHelpText>Business lines and offerings not allowable to Flywire</inlineHelpText>
    <label>Prohibited Services</label>
    <length>255</length>
    <type>Text</type>
</CustomField>