FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Projected_Value_Payments_Next_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Projected_Value_Payments_Next_12_Months__c</fullName>
    <inlineHelpText>Estimated tally of payments applicant expects over the next 12 months</inlineHelpText>
    <label>Projected Value Payments Next 12 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>