FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Purpose_of_Payments__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Payments__c</fullName>
    <inlineHelpText>Description of payments filtering through Flywire - tuition/fees, travel accommodations, vendor payments, etc.</inlineHelpText>
    <label>Purpose of Payments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>