FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Record_External_Link__c.field-meta.xml
<CustomField>
    <fullName>Record_External_Link__c</fullName>
    <description>This field is used in email templates to get the org instance link</description>
    <formula>&apos;https://flywire.my.salesforce.com/&apos;&amp;  Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record External Link</label>
    <type>Text</type>
</CustomField>