FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Refund_Cancellation_Terms__c.field-meta.xml
<CustomField>
    <fullName>Refund_Cancellation_Terms__c</fullName>
    <label>Refund/Cancellation Terms</label>
    <type>Url</type>
</CustomField>