FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Regulatory_Status__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Status__c</fullName>
    <inlineHelpText>Medical or Education-related Accrediation acheived by applicant, as applicable</inlineHelpText>
    <label>Regulatory Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>