FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Risk_Calibration__c.field-meta.xml
<CustomField>
    <fullName>Risk_Calibration__c</fullName>
    <inlineHelpText>Inherent money laundering and fraud risk to FW: Low, Med, High</inlineHelpText>
    <label>Risk Calibration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>